# skill-bridge

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  interface.py  railway.json  requirements.txt
backend/: .env.example  Dockerfile  README.md  README_RAG.md  pyproject.toml  render.yaml  requirements.txt  run.bat  run.sh  setup.bat  setup.sh  test_spacy_model.py
backend/app/: build_course_index.py  initial_rag_code.py  main.py
backend/app/api/: job_routes.py  routes.py
backend/app/core/: config.py
backend/app/models/: job_models.py  schemas.py
backend/app/services/: cache_service.py  job_queue_service.py  nlp_service.py  rag_service.py  similarity_service.py
backend/app/utils/: embedding_utils.py  loader.py
backend/models/ner_model_1000_word2vec/ner/: model
backend/models/ner_model_1000_word2vec/vocab/: strings.json
client/: .env.example  .gitignore  .prettierrc  Dockerfile  README.md  README_RAG.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vercel.json  vite.config.ts
client-next/.next/: trace
client/app/: globals.css  layout.tsx  page.tsx
client/components/: server-status-checker.tsx
client/configs/: config.ts
client/hooks/: use-resume-analysis.ts
client/lib/: api.ts  constants.ts  job-api.ts  utils.ts
client/src/: App.tsx  index.css
client/types/: config.ts  processing.ts
docs/: ANIMATED_LOADING_DESIGN.md  PRD.md  job-queue-implementation.md
models/ner_10000_word2vec_glassdoor/: meta.json
ner_10000_word2vec_glassdoor/vocab/: strings.json
ner_model_1000_word2vec/: meta.json
(+48 files in other folders)
